--- a/home.html
+++ b/home.html
@@ -6,50 +6,66 @@
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-bg: #121212;
+            --card-bg: #1e1e1e;
+            --text-color: white;
+            --hover-color: #424242;
+            --button-bg: #d32f2f;
+            --button-bg-hover: #b71c1c;
+        }
+
+        body.light-theme {
+            --primary-bg: #f0f0f0;
+            --card-bg: #ffffff;
+            --text-color: black;
+            --hover-color: #e0e0e0;
+            --button-bg: #0288d1;
+            --button-bg-hover: #0277bd;
+        }
+
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #121212;
-            color: white;
+            background-color: var(--primary-bg);
+            color: var(--text-color);
+            transition: background-color 0.3s, color 0.3s;
         }
+
         header {
-            background-color: #1e1e1e;
+            background-color: var(--card-bg);
             padding: 20px;
             text-align: center;
             font-size: 24px;
             font-weight: bold;
             color: #90caf9;
         }
+
         nav {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #333333;
+            background-color: var(--card-bg);
             padding: 10px 20px;
             flex-wrap: wrap;
         }
+
         .nav-links {
             display: flex;
             gap: 15px;
         }
+
         nav a {
-            color: white;
+            color: var(--text-color);
             text-decoration: none;
             font-weight: 500;
             position: relative;
         }
-        nav a::after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 2px;
-            background: #90caf9;
-            transition: width 0.3s;
-            margin-top: 5px;
-        }
+
         nav a:hover::after {
             width: 100%;
         }
+
         .badge {
             background-color: red;
             color: white;
@@ -60,38 +76,63 @@
             top: -5px;
             right: -10px;
         }
+
         .content {
             padding: 20px;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
         }
+
         .card {
-            background-color: #1e1e1e;
+            background-color: var(--card-bg);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s;
         }
+
         .card:hover {
             transform: scale(1.05);
         }
+
         .card-icon {
             font-size: 40px;
             margin-bottom: 10px;
+            position: relative;
         }
+
+        .logout-button {
+            padding: 10px 15px;
+            background-color: var(--button-bg);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .logout-button:hover {
+            background-color: var(--button-bg-hover);
+        }
+
+        .theme-switch-button {
+            background-color: var(--button-bg);
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
         .footer {
-            background-color: #1e1e1e;
+            background-color: var(--card-bg);
             padding: 10px;
             text-align: center;
             position: fixed;
             bottom: 0;
             width: 100%;
-        }
-        .theme-switch {
-            position: absolute;
-            right: 20px;
-            top: 20px;
         }
     </style>
 </head>
@@ -99,7 +140,6 @@
 
 <header>
     Página Inicial - Bem-vindo!
-    <input type="checkbox" class="theme-switch" id="themeSwitch"> Modo Claro/Escuro
 </header>
 
 <nav>
@@ -109,7 +149,10 @@
         <a href="#">Configurações</a>
         <a href="ia.html">IA <span class="badge">3</span></a>
     </div>
-    <button class="logout-button" id="logoutButton">Sair</button>
+    <div>
+        <button class="theme-switch-button" id="themeSwitch">🌙 Alternar Tema</button>
+        <button class="logout-button" id="logoutButton">Sair</button>
+    </div>
 </nav>
 
 <div class="content">
@@ -166,13 +209,15 @@
     fetchOnlineUsers();
 
     const themeSwitch = document.getElementById('themeSwitch');
-    themeSwitch.addEventListener('change', () => {
+    themeSwitch.addEventListener('click', () => {
         document.body.classList.toggle('light-theme');
+        themeSwitch.textContent = document.body.classList.contains('light-theme') ? '🌙 Modo Escuro' : '🌞 Modo Claro';
     });
 </script>
 
 </body>
 </html>
+
 
 
 
