--- a/home.html
+++ b/home.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
-            --primary-bg: #1a1a1a;
+            --primary-bg: #0d1117;
             --primary-color: white;
-            --secondary-bg: #333;
-            --notification-color: red;
-        }
-
-        [data-theme="light"] {
-            --primary-bg: #f0f0f0;
-            --primary-color: black;
-            --secondary-bg: #ddd;
-            --notification-color: blue;
+            --secondary-bg: #161b22;
+            --accent-color: #1f6feb;
+            --notification-color: #ff5252;
         }
 
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background-color: var(--primary-bg);
             color: var(--primary-color);
             margin: 0;
@@ -28,20 +24,20 @@
             transition: background-color 0.3s, color 0.3s;
         }
 
-        /* Menu superior */
         nav {
             background-color: var(--secondary-bg);
-            padding: 10px 20px;
+            padding: 15px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         nav ul {
-            list-style-type: none;
+            display: flex;
+            list-style: none;
             margin: 0;
             padding: 0;
-            display: flex;
         }
 
         nav ul li {
@@ -51,6 +47,33 @@
         nav ul li a {
             text-decoration: none;
             color: var(--primary-color);
+            font-weight: 500;
+            font-size: 18px;
+        }
+
+        .container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            padding: 40px;
+        }
+
+        .card {
+            background-color: var(--secondary-bg);
+            width: 300px;
+            margin: 20px;
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+
+        .card h3 {
+            margin-bottom: 10px;
+            color: var(--accent-color);
+        }
+
+        .card p {
             font-size: 18px;
         }
 
@@ -61,76 +84,66 @@
 
         .notification .badge {
             position: absolute;
-            top: -10px;
-            right: -10px;
+            top: -8px;
+            right: -8px;
             background-color: var(--notification-color);
-            color: white;
             border-radius: 50%;
-            padding: 5px 10px;
+            padding: 4px 8px;
             font-size: 12px;
         }
 
         .theme-toggle {
             cursor: pointer;
-            font-size: 18px;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 80vh;
-        }
-
-        .card {
-            background-color: var(--secondary-bg);
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-        }
-
-        .card h2 {
-            margin: 0 0 10px;
-        }
-
-        .card p {
             font-size: 24px;
+            color: var(--primary-color);
         }
     </style>
 </head>
 <body>
-    <!-- Menu de navegação -->
+
+    <!-- Menu de Navegação -->
     <nav>
         <ul>
             <li><a href="#">Início</a></li>
             <li><a href="ia.html">IA</a></li>
+            <li><a href="agentebot.html">Agente Bot</a></li>
             <li><a href="#">Serviços</a></li>
-            <li><a href="#">Contato</a></li>
         </ul>
-
         <div class="notification">
             <span class="material-icons">notifications</span>
             <span class="badge" id="notificationCount">0</span>
         </div>
-
         <div class="theme-toggle" id="themeToggle">🌙</div>
     </nav>
 
-    <!-- Card de usuários online -->
+    <!-- Container de Cards -->
     <div class="container">
         <div class="card">
-            <h2>Usuários Online</h2>
+            <h3>Usuários Online</h3>
             <p id="onlineUsers">Carregando...</p>
+        </div>
+
+        <div class="card">
+            <h3>Atividades Recentes</h3>
+            <p>Mike fez login às 10:30</p>
+        </div>
+
+        <div class="card">
+            <h3>Estado do Sistema</h3>
+            <p>Sistema online há: 3 horas e 24 minutos</p>
+        </div>
+
+        <div class="card">
+            <h3>Notificações</h3>
+            <p>Você tem <span id="notificationCount">0</span> novas notificações</p>
         </div>
     </div>
 
     <script>
-        // Alterna entre tema claro e escuro
+        // Alternância de Tema
         const themeToggle = document.getElementById('themeToggle');
         const currentTheme = localStorage.getItem('theme') || 'dark';
         document.documentElement.setAttribute('data-theme', currentTheme);
-
         themeToggle.textContent = currentTheme === 'dark' ? '🌙' : '☀️';
 
         themeToggle.addEventListener('click', () => {
@@ -140,7 +153,7 @@
             themeToggle.textContent = newTheme === 'dark' ? '🌙' : '☀️';
         });
 
-        // Função para obter o número de usuários online
+        // Atualizar Usuários Online
         async function fetchOnlineUsers() {
             try {
                 const response = await fetch('https://seu-backend.replit.app/online-users');
@@ -152,29 +165,21 @@
             }
         }
 
-        // Função para atualizar o contador de notificações (simulado)
+        // Atualizar Contador de Notificações
         function updateNotificationCount() {
-            const count = Math.floor(Math.random() * 10);  // Simula um número aleatório de notificações
+            const count = Math.floor(Math.random() * 10);
             document.getElementById('notificationCount').textContent = count;
         }
 
-        // Atualiza os usuários online a cada 5 segundos
         setInterval(fetchOnlineUsers, 5000);
-
-        // Atualiza o contador de notificações a cada 10 segundos
         setInterval(updateNotificationCount, 10000);
 
-        // Chamada inicial para buscar o número de usuários online
         fetchOnlineUsers();
         updateNotificationCount();
     </script>
 
-    <!-- Importa ícones do Google Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </body>
 </html>
-
-
 
 
 
