--- a/home.html
+++ b/home.html
@@ -15,6 +15,14 @@
             --notification-color: #ff5252;
         }
 
+        [data-theme="light"] {
+            --primary-bg: #f0f0f0;
+            --primary-color: #000;
+            --secondary-bg: #e5e5e5;
+            --accent-color: #007bff;
+            --notification-color: blue;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             background-color: var(--primary-bg);
@@ -33,6 +41,11 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
+        .menu {
+            display: flex;
+            align-items: center;
+        }
+
         nav ul {
             display: flex;
             list-style: none;
@@ -49,6 +62,22 @@
             color: var(--primary-color);
             font-weight: 500;
             font-size: 18px;
+        }
+
+        .search-bar {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            background-color: var(--secondary-bg);
+            padding: 8px;
+            border-radius: 8px;
+        }
+
+        .search-bar input {
+            border: none;
+            background: none;
+            outline: none;
+            color: var(--primary-color);
         }
 
         .container {
@@ -73,10 +102,6 @@
             color: var(--accent-color);
         }
 
-        .card p {
-            font-size: 18px;
-        }
-
         .notification {
             position: relative;
             cursor: pointer;
@@ -95,7 +120,22 @@
         .theme-toggle {
             cursor: pointer;
             font-size: 24px;
+            margin-left: 15px;
             color: var(--primary-color);
+        }
+
+        .logout {
+            background-color: var(--notification-color);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .logout:hover {
+            background-color: darkred;
         }
     </style>
 </head>
@@ -103,17 +143,28 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="ia.html">IA</a></li>
-            <li><a href="agentebot.html">Agente Bot</a></li>
-            <li><a href="#">Serviços</a></li>
-        </ul>
-        <div class="notification">
-            <span class="material-icons">notifications</span>
-            <span class="badge" id="notificationCount">0</span>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="ia.html">IA</a></li>
+                <li><a href="agentebot.html">Agente Bot</a></li>
+                <li><a href="#">Serviços</a></li>
+            </ul>
+
+            <div class="search-bar">
+                <span class="material-icons">search</span>
+                <input type="text" placeholder="Buscar...">
+            </div>
         </div>
-        <div class="theme-toggle" id="themeToggle">🌙</div>
+
+        <div class="actions">
+            <div class="notification">
+                <span class="material-icons">notifications</span>
+                <span class="badge" id="notificationCount">0</span>
+            </div>
+            <div class="theme-toggle" id="themeToggle">🌙</div>
+            <button class="logout" onclick="logout()">Logout</button>
+        </div>
     </nav>
 
     <!-- Container de Cards -->
@@ -140,20 +191,18 @@
     </div>
 
     <script>
-        // Alternância de Tema
         const themeToggle = document.getElementById('themeToggle');
         const currentTheme = localStorage.getItem('theme') || 'dark';
         document.documentElement.setAttribute('data-theme', currentTheme);
-        themeToggle.textContent = currentTheme === 'dark' ? '🌙' : '☀️';
+        themeToggle.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
 
         themeToggle.addEventListener('click', () => {
             const newTheme = document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
             document.documentElement.setAttribute('data-theme', newTheme);
             localStorage.setItem('theme', newTheme);
-            themeToggle.textContent = newTheme === 'dark' ? '🌙' : '☀️';
+            themeToggle.textContent = newTheme === 'dark' ? '☀️' : '🌙';
         });
 
-        // Atualizar Usuários Online
         async function fetchOnlineUsers() {
             try {
                 const response = await fetch('https://seu-backend.replit.app/online-users');
@@ -165,10 +214,14 @@
             }
         }
 
-        // Atualizar Contador de Notificações
         function updateNotificationCount() {
             const count = Math.floor(Math.random() * 10);
             document.getElementById('notificationCount').textContent = count;
+        }
+
+        function logout() {
+            localStorage.removeItem('token');
+            window.location.href = 'index.html';
         }
 
         setInterval(fetchOnlineUsers, 5000);
@@ -180,10 +233,6 @@
 
 </body>
 </html>
-
-
-
-
 
 
 
