--- a/agentebot.html
+++ b/agentebot.html
@@ -4,39 +4,206 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agente Bot</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary-bg: #0d1117;
+            --secondary-bg: #161b22;
+            --accent-color: #1f6feb;
+            --message-bg: #1e262f;
+            --user-message-bg: #0d47a1;
+            --primary-color: white;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+            background-color: var(--primary-bg);
+            color: var(--primary-color);
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+
+        header {
+            background-color: var(--secondary-bg);
+            padding: 15px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end;
+            margin-top: -35px;
+        }
+
+        nav ul li {
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: var(--primary-color);
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        #chat-container {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            justify-content: space-between;
+            max-width: 600px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        #messages {
+            flex-grow: 1;
+            overflow-y: auto;
+            padding-right: 10px;
+        }
+
+        .message {
+            background-color: var(--message-bg);
+            padding: 12px;
+            margin: 8px 0;
+            border-radius: 8px;
+            max-width: 75%;
+        }
+
+        .user-message {
+            background-color: var(--user-message-bg);
+            align-self: flex-end;
+        }
+
+        .input-area {
+            display: flex;
+            margin-top: 10px;
+        }
+
+        .input-area input {
+            flex-grow: 1;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            background-color: var(--secondary-bg);
+            color: var(--primary-color);
+            margin-right: 8px;
+            outline: none;
+        }
+
+        .input-area button {
+            padding: 12px 20px;
+            border: none;
+            border-radius: 8px;
+            background-color: var(--accent-color);
+            color: white;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .input-area button:hover {
+            background-color: #1565c0;
+        }
+
+        #fileInput {
+            margin: 10px 0;
+        }
+
+        #loading {
+            display: none;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        #loading img {
+            width: 50px;
+            height: 50px;
+        }
+
+    </style>
 </head>
 <body>
     <header>
-        <h1>Agente Bot</h1>
+        Agente Bot
         <nav>
             <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="agentebot.html">Agente Bot</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="index.html">Voltar para Home</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <div id="chat-container">
             <div id="messages"></div>
 
             <!-- Campo para anexar arquivo -->
             <input type="file" id="fileInput">
-            
+
             <div class="input-area">
                 <input type="text" id="userInput" placeholder="Digite sua mensagem...">
                 <button onclick="sendMessage()">Enviar</button>
             </div>
 
             <!-- Ícone de carregamento -->
-            <div id="loading" class="hidden">
+            <div id="loading">
                 <img src="loading.gif" alt="Carregando...">
             </div>
         </div>
     </main>
-    <script src="script.js"></script>
+
+    <script>
+        const messagesContainer = document.getElementById('messages');
+        const userInput = document.getElementById('userInput');
+        const loadingIndicator = document.getElementById('loading');
+
+        function addMessage(content, isUser = false) {
+            const message = document.createElement('div');
+            message.classList.add('message');
+            if (isUser) message.classList.add('user-message');
+            message.textContent = content;
+            messagesContainer.appendChild(message);
+            messagesContainer.scrollTop = messagesContainer.scrollHeight;
+        }
+
+        async function sendMessage() {
+            const message = userInput.value.trim();
+            if (!message) return;
+
+            addMessage(message, true);
+            userInput.value = '';
+            showLoading(true);
+
+            try {
+                const response = await fetch('https://seu-backend.replit.app/ia', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ question: message }),
+                });
+
+                const data = await response.json();
+                addMessage(data.answer);
+            } catch (error) {
+                console.error('Erro:', error);
+                addMessage('Erro ao processar a mensagem.');
+            } finally {
+                showLoading(false);
+            }
+        }
+
+        function showLoading(isLoading) {
+            loadingIndicator.style.display = isLoading ? 'block' : 'none';
+        }
+    </script>
 </body>
 </html>
-
 
