--- a/index.html
+++ b/index.html
@@ -13,45 +13,52 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #121212; /* Fundo preto elegante */
+            background-color: #121212;
             font-family: 'Poppins', sans-serif;
-            color: #ffffff;
+            color: white;
+            background: url('login-background.jpg') no-repeat center center fixed;
+            background-size: cover;
         }
+
         .login-container {
-            background-color: #1e1e1e; /* Fundo do formulário mais escuro */
+            background-color: rgba(30, 30, 30, 0.85); /* Fundo semitransparente */
             padding: 40px;
             border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
             width: 400px;
             text-align: center;
         }
+
         .login-container h2 {
             margin-bottom: 20px;
-            color: #90caf9; /* Azul claro para destacar o título */
+            color: #90caf9; /* Azul claro */
         }
+
         .input-group {
             margin-bottom: 15px;
             text-align: left;
         }
+
         label {
             display: block;
             margin-bottom: 5px;
             font-weight: 500;
-            color: #ffffff;
         }
+
         input {
             width: 100%;
             padding: 12px;
             border: 1px solid #424242;
             border-radius: 8px;
-            margin-bottom: 10px;
             background-color: #2c2c2c;
             color: white;
             outline: none;
         }
+
         input:focus {
-            border-color: #90caf9; /* Destaque em azul claro */
+            border-color: #90caf9;
         }
+
         button {
             width: 100%;
             padding: 12px;
@@ -63,13 +70,25 @@
             font-weight: 600;
             transition: background-color 0.3s ease;
         }
+
         button:hover {
             background-color: #0277bd;
         }
+
         #message {
             margin-top: 15px;
-            color: #ff5252;
             font-weight: 600;
+        }
+
+        .back-to-home {
+            margin-top: 10px;
+            color: #90caf9;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .back-to-home:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -89,6 +108,7 @@
         <button type="submit">Entrar</button>
         <p id="message"></p>
     </form>
+    <a href="home.html" class="back-to-home">Voltar para a Página Inicial</a>
 </div>
 
 <script>
@@ -111,12 +131,13 @@
             if (response.ok) {
                 localStorage.setItem('token', data.token);
                 messageEl.textContent = 'Login bem-sucedido!';
-                messageEl.style.color = '#00e676';  // Verde para sucesso
+                messageEl.style.color = '#00e676'; // Verde para sucesso
                 setTimeout(() => {
                     window.location.href = 'home.html';
                 }, 1000);
             } else {
                 messageEl.textContent = 'Erro: ' + data.message;
+                messageEl.style.color = '#ff5252'; // Vermelho para erro
             }
         } catch (error) {
             messageEl.textContent = 'Erro ao fazer login.';
@@ -127,7 +148,5 @@
 
 </body>
 </html>
-
-
 
 
